@@ -39,6 +39,9 @@ Improvements
 * LUCENE-9663: Add compression to terms dict from SortedSet/Sorted DocValues.
   (Jaison Bi via Bruno Roustant)
 
+* LUCENE-9877: Reduce index size by increasing allowable exceptions in PForUtil from
+  3 to 7. (Greg Miller)
+
 
 Optimizations
 ---------------------
